g EM-619: fixed by supressing warnings from org.apache.cxf.phase.PhaseInterceptorChain by setting it's level to SEVERE in logging.properties for the PC, SSEM and SSG. This stops any thrown exceptions from any interceptor from causing a stack trace to be logged. Prior to CXF2.1.6 these expected conditions were logged at INFO.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25798 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -34,6 +34,7 @@ org.springframework.remoting.support.RemoteInvocationTraceInterceptor.level = SE
 org.springframework.beans.factory.config.PropertiesFactoryBean.level = SEVERE
 org.springframework.beans.factory.config.PropertyPlaceholderConfigurer.level = SEVERE
 com.l7tech.server.util.PasswordDecryptingPropertiesFactoryBean.level = SEVERE
+org.apache.cxf.phase.PhaseInterceptorChain.level = SEVERE
 
 # Turn off traffic logging for regular log files
 com.l7tech.traffic.useParentHandlers = false
