--- a/modules/ems/src/main/resources/com/l7tech/server/ems/resources/logging.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/resources/logging.properties
@@ -33,3 +33,4 @@ com.l7tech.level = CONFIG
 org.hibernate.util.JDBCExceptionReporter.level = OFF
 com.l7tech.server.ems.listener.EsmServletContainer.SERVLET.level = SEVERE
 org.apache.wicket.Localizer.level = SEVERE
+org.apache.cxf.phase.PhaseInterceptorChain.level = SEVERE
