--- a/modules/gateway/processcontroller/src/main/resources/com/l7tech/server/processcontroller/resources/logging.properties
+++ b/modules/gateway/processcontroller/src/main/resources/com/l7tech/server/processcontroller/resources/logging.properties
@@ -26,3 +26,4 @@ com.l7tech.level = CONFIG
 
 # Suppress expected warnings
 com.l7tech.server.processcontroller.PCServletContainer.SERVLET.level = SEVERE
+org.apache.cxf.phase.PhaseInterceptorChain.level = SEVERE
