--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -23,18 +23,18 @@ STDERR.level = INFO
 com.l7tech.level = CONFIG
 
 # uncommenting statement below will cause log records to have a suffix
-# which contains the published service name and id relevent to their
+# which contains the published service name and id relevant to their
 # invocation
 # com.l7tech.logging.appendservicename = true
 
 # Turn off WARNING for expected/accepted behaviours
 com.mchange.level = SEVERE
-com.l7tech.spring.remoting.rmi.RmiRegistryInitializer.level = SEVERE
 org.springframework.remoting.support.RemoteInvocationTraceInterceptor.level = SEVERE
 org.springframework.beans.factory.config.PropertiesFactoryBean.level = SEVERE
 org.springframework.beans.factory.config.PropertyPlaceholderConfigurer.level = SEVERE
 com.l7tech.server.util.PasswordDecryptingPropertiesFactoryBean.level = SEVERE
 org.apache.cxf.phase.PhaseInterceptorChain.level = SEVERE
+org.hibernate.validator.util.Version.level = SEVERE
 
 # Turn off traffic logging for regular log files
 com.l7tech.traffic.useParentHandlers = false
