SSG-3904: JMS Routing connection management updated to use a managed pool of connections with configurable lifetime, idle time and maximum size. JmsConnection and JmsEndpoint entities can now be locked for use in caches, etc.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25839 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -564,6 +564,18 @@ ioJmsMessageMaxBytes.default = 5242880
 ioJmsMessageMaxBytes.systemProperty = ${propertyPrefix}.jmsMessageMaxBytes
 ioJmsMessageMaxBytes.clusterProperty = io.jmsMessageMaxBytes
 
+ioJmsConnectionCacheMaxAge.description = Maximum age for cached JMS connections or 0 for no limit (timeunit)
+ioJmsConnectionCacheMaxAge.default = 10m
+ioJmsConnectionCacheMaxAge.clusterProperty = io.jmsConnectionCacheMaxAge
+
+ioJmsConnectionCacheMaxIdleTime.description = The maximum time an idle JMS connection will be cached or 0 for no limit (timeunit)
+ioJmsConnectionCacheMaxIdleTime.default = 5m
+ioJmsConnectionCacheMaxIdleTime.clusterProperty = io.jmsConnectionCacheMaxIdleTime
+
+ioJmsConnectionCacheSize.description = The number of JMS connections to cache, this is not a hard limit, 0 for no caching (Integer)
+ioJmsConnectionCacheSize.default = 100
+ioJmsConnectionCacheSize.clusterProperty = io.jmsConnectionCacheMaxSize
+
 ioStaleCheckCount.description = Number of stale checked connections per interval (Integer)
 ioStaleCheckCount.default = 1
 ioStaleCheckCount.systemProperty = com.l7tech.common.http.prov.apache.CommonsHttpClient.staleCheckCount
