bug 8622: JMS response timeout is now configurable through the ioJmsResponseTimeout clusterproperty, and it can be overriden by the JMS routing assertion's properties.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25852 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -559,6 +559,10 @@ ioJmsErrorSleep.description = Time to sleep after a connection error for an inbo
 ioJmsErrorSleep.default = 60s
 ioJmsErrorSleep.clusterProperty = jms.connectErrorSleep
 
+ioJmsResponseTimeout.description = Timeout for JMS routing to wait on the replyTo queue in milliseconds, default 10 seconds.  
+ioJmsResponseTimeout.default = 10000
+ioJmsResponseTimeout.clusterProperty = jms.responseTimeout
+
 ioJmsMessageMaxBytes.description = Maximum number of bytes permitted for a JMS message, or 0 for unlimited (Integer)
 ioJmsMessageMaxBytes.default = 5242880
 ioJmsMessageMaxBytes.systemProperty = ${propertyPrefix}.jmsMessageMaxBytes
