--- a/build.xml
+++ b/build.xml
@@ -610,13 +610,13 @@
             <param name="idea.teamcity.user" expression="${idea.teamcity.user}"/>
             <param name="idea.teamcity.password" expression="${idea.teamcity.password}" if="idea.teamcity.password"/>
             <param name="idea.teamcity.remember" expression="${idea.teamcity.remember}" if="idea.teamcity.remember"/>
-            <param name="idea.gateway.vmOptions" expression="-Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.home=&quot;${dev.deploy.dir}/Gateway/node/default&quot; -Djava.net.preferIPv4Stack=true"/>
-            <param name="idea.controller.vmOptions" expression="-Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.log.console=true -Dcom.l7tech.gateway.home=../../Gateway"/>
-            <param name="idea.configwiz.vmOptions" expression="-Dcom.l7tech.util.buildVersion=${build.version}"/>
-            <param name="idea.pcconfig.vmOptions" expression="-Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.controller.home=&quot;${dev.deploy.dir}/Controller&quot;"/>
-            <param name="idea.client.vmOptions" expression="-Dcom.l7tech.util.buildVersion=${build.version}"/>
-            <param name="idea.manager.vmOptions" expression="-Dcom.l7tech.util.buildVersion=${build.version}"/>
-            <param name="idea.esm.vmOptions" expression="-Dcom.l7tech.util.buildVersion=${build.em.version} -Dcom.l7tech.server.log.console=true -Dcom.l7tech.ems.outputDbScript=overwrite -Dcom.l7tech.ems.development=true"/>
+            <param name="idea.gateway.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.home=&quot;${dev.deploy.dir}/Gateway/node/default&quot; -Djava.net.preferIPv4Stack=true"/>
+            <param name="idea.controller.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.log.console=true -Dcom.l7tech.gateway.home=../../Gateway"/>
+            <param name="idea.configwiz.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version}"/>
+            <param name="idea.pcconfig.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.controller.home=&quot;${dev.deploy.dir}/Controller&quot;"/>
+            <param name="idea.client.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version}"/>
+            <param name="idea.manager.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version}"/>
+            <param name="idea.esm.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.em.version} -Dcom.l7tech.server.log.console=true -Dcom.l7tech.ems.outputDbScript=overwrite -Dcom.l7tech.ems.development=true"/>
             <param name="idea.controller.home" expression="${dev.deploy.dir}/Controller"/>
             <param name="idea.esm.home" expression="${dev.deploy.dir}/EnterpriseManager"/>
         </xslt>
