SSM-2698: fixed by adding ', or 0 for unlimited (Integer).' to each of the cluster property descriptions.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25872 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -653,7 +653,7 @@ schemaRecompileMaxAge.default = 20000
 schemaRecompileMaxAge.systemProperty = ${propertyPrefix}.schemacache.recompileMaxAge
 schemaRecompileMaxAge.clusterProperty = schemacache.recompileMaxAge
 
-schemaCacheMaxSchemaSize.description = Maximum size in bytes of a Schema document download
+schemaCacheMaxSchemaSize.description = Maximum size in bytes of a Schema document download, or 0 for unlimited (Integer).
 schemaCacheMaxSchemaSize.default = ${documentDownload.maxSize}
 schemaCacheMaxSchemaSize.systemProperty = ${propertyPrefix}.schemacache.maxSchemaSize
 schemaCacheMaxSchemaSize.clusterProperty = schemacache.maxSchemaSize
@@ -1223,14 +1223,14 @@ jdbcConnection.driverClass.defaultList.clusterProperty=jdbcConnection.driverClas
 jdbcConnection.driverClass.defaultList.visible=true
 
 # 10485760 = 1024 * 1024 * 10
-documentDownload.maxSize.description=Maximum default size in bytes of a document download. Default is 10MB.
+documentDownload.maxSize.description=Maximum default size in bytes of a document download, or 0 for unlimited (Integer). Default is 10MB.
 documentDownload.maxSize.default=10485760
 documentDownload.maxSize.systemProperty=${propertyPrefix}.documentDownload.maxSize
 
-wsdlDocMaxDownloadSize.description = Maximum size in bytes of a WSDL document download
+wsdlDocMaxDownloadSize.description = Maximum size in bytes of a WSDL document download, or 0 for unlimited (Integer).
 wsdlDocMaxDownloadSize.default = ${documentDownload.maxSize}
 wsdlDocMaxDownloadSize.clusterProperty = wsdlDownload.maxSize
 
-xslDocMaxDownloadSize.description = Maximum size in bytes of a XSL document download
+xslDocMaxDownloadSize.description = Maximum size in bytes of a XSL document download, or 0 for unlimited (Integer).
 xslDocMaxDownloadSize.default = ${documentDownload.maxSize}
 xslDocMaxDownloadSize.clusterProperty = xslDownload.maxSize
