Minor build update. Developers unchecked deploy now removes pack200 files.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25884 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -1443,6 +1443,11 @@
     </target>
 
     <target name="deploy-nocheck" description="Deploy a development SSG, skipping the build (useful to deploy partial rebuild)" depends="deployconfig, package.manager.work, package.gateway.work, package.modules.work">
+        <!-- Remove any pack200 files if present, otherwise these can be out of date and cause problems running the SSM applet -->
+        <delete>
+            <fileset dir="${build.dir}/managerapplet/" includes="**/*.pack.gz"/>
+        </delete>
+
         <install-ssg-software dir="${dev.deploy.ssg.dir}"/>
     </target>
 
