SSM-2699: fixed by updating the cluster property descriptions to say that a gateway restart is required.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25892 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -617,23 +617,23 @@ ioMailInTimeout.default = 60s
 ioMailInTimeout.clusterProperty = mail.inTimeout
 
 # Old name of this setting, but defaults live here -- new one points at this one for defaults
-xsltMaxCacheEntries.description = Maximum number of cached stylesheets loaded from URLs (Integer)
+xsltMaxCacheEntries.description = Maximum number of cached stylesheets loaded from URLs (Integer). Requires gateway restart.
 xsltMaxCacheEntries.default = 100
 xsltMaxCacheEntries.systemProperty = ${propertyPrefix}.xsltcache.maxEntries
 xsltMaxCacheEntries.clusterProperty = xsltcache.maxEntries
 
 # Old name of this setting, but defaults live here -- new one points at this one for defaults
-xsltMaxCacheAge.description = Maximum age of cached stylesheets loaded from URLs (Milliseconds)
+xsltMaxCacheAge.description = Maximum age of cached stylesheets loaded from URLs (Milliseconds). Requires gateway restart.
 xsltMaxCacheAge.default = 300000
 xsltMaxCacheAge.systemProperty = ${propertyPrefix}.xsltcache.maxAge
 xsltMaxCacheAge.clusterProperty = xsltcache.maxAge
 
-schemaMaxCacheAge.description = Maximum age of cached XML Schema documents loaded from URLs (Milliseconds)
+schemaMaxCacheAge.description = Maximum age of cached XML Schema documents loaded from URLs (Milliseconds). Requires gateway restart.
 schemaMaxCacheAge.default = 30000
 schemaMaxCacheAge.systemProperty = ${propertyPrefix}.schemacache.maxAge
 schemaMaxCacheAge.clusterProperty = schemacache.maxAge
 
-schemaMaxCacheEntries.description = Maximum number of cached XML schema documents loaded from URLs (Integer)
+schemaMaxCacheEntries.description = Maximum number of cached XML schema documents loaded from URLs (Integer). Requires gateway restart.
 schemaMaxCacheEntries.default = 100
 schemaMaxCacheEntries.systemProperty = ${propertyPrefix}.schemacache.maxEntries
 schemaMaxCacheEntries.clusterProperty = schemacache.maxEntries
@@ -653,7 +653,7 @@ schemaRecompileMaxAge.default = 20000
 schemaRecompileMaxAge.systemProperty = ${propertyPrefix}.schemacache.recompileMaxAge
 schemaRecompileMaxAge.clusterProperty = schemacache.recompileMaxAge
 
-schemaCacheMaxSchemaSize.description = Maximum size in bytes of a Schema document download, or 0 for unlimited (Integer).
+schemaCacheMaxSchemaSize.description = Maximum size in bytes of a Schema document download, or 0 for unlimited (Integer)
 schemaCacheMaxSchemaSize.default = ${documentDownload.maxSize}
 schemaCacheMaxSchemaSize.systemProperty = ${propertyPrefix}.schemacache.maxSchemaSize
 schemaCacheMaxSchemaSize.clusterProperty = schemacache.maxSchemaSize
