SSM-2702: fixed by allowing each assertion, including folders assertions, custom and modular assertions to be able to have a comment which will stay with the assertion as it is moved in the policy editor. Added Show / Hide button for display of the comment. Updated Wsdl Servlet to never include comments in a layer7 policy and the Policy servlet to return comments in policy only when explicitly asked for and a full policy download is applicable. Updated custom assertion base64 in static resourcess used by WspWriterTest as the new Assertion property has changed the serialized value, however old polices will import / paste successfully with these changes. (New property added not old property removed)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25964 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1234,3 +1234,11 @@ wsdlDocMaxDownloadSize.clusterProperty = wsdlDownload.maxSize
 xslDocMaxDownloadSize.description = Maximum size in bytes of a XSL document download, or 0 for unlimited (Integer).
 xslDocMaxDownloadSize.default = ${documentDownload.maxSize}
 xslDocMaxDownloadSize.clusterProperty = xslDownload.maxSize
+
+policyEditor.maxRhsCommentSize.description=Maximum size of a right aligned comment in the policy editor window
+policyEditor.maxRhsCommentSize.default = 100
+policyEditor.maxRhsCommentSize.clusterProperty = policyEditor.maxRhsCommentSize 
+
+policyEditor.maxLhsCommentSize.description=Maximum size of a left aligned comment in the policy editor window
+policyEditor.maxLhsCommentSize.default = 30
+policyEditor.maxLhsCommentSize.clusterProperty = policyEditor.maxLhsCommentSize 
