SSG-994: Support for XML Schema includes/redefines. The "system" flag for schema entries is no longer persistent. The global schema dialog is now ordered by system identifier and supports sorting.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25979 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -1323,7 +1323,7 @@
     -->
     <target name="modulet" description="Run a target on a single module (use with -Dmodule=... -Dtarget=...)" depends="prepare.base">
         <fail unless="module">module is a required property (the module to package)</fail>
-        <fail unless="target">target is a required property (the target to run)</fail>
+        <property name="target" value="package"/>
 
         <!-- Create build list for required 1.5 modules -->
         <ivy:buildlist root="${module}" reference="module-build-path-single" onMissingDescriptor="skip" restartFrom="${module}">
