SSG-3671: fixed by tracking each endpoint published for business services published to UDDI and independent bindingTemplates. Also track the bindingKey of any bindingTemplates published. Any updates to a previously published UDDI object (bindingTemplate or tModel) will reuse it's existing key instead of always creating new objects. Updated UDDICoordinator with a new task to monitor the gateway's external endpoints so that UDDI can be updated when they change. Cluster properties for gateway endpoint are now also monitored. Added new cluster & system property "uddi.auto_republish" to turn off this auto republish to UDDI. Added test coverage.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25991 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -713,6 +713,12 @@ uddi.wsdlpublish.maxretries.description = Maximum number of retry attemps when p
 uddi.wsdlpublish.maxretries.clusterProperty = uddi.wsdlpublish.maxretries
 uddi.wsdlpublish.maxretries.default = 3
 
+# setting for auto republishing to uddi when external urls change
+uddi.autorepublish.default = true
+uddi.autorepublish.description = Republish to UDDI as needed e.g. when the cluster hostname or port number changes
+uddi.autorepublish.clusterProperty = uddi.auto_republish
+uddi.autorepublish.systemProperty = ${propertyPrefix}.uddi.auto_republish
+
 # Active SOA specific cluster properties
 uddi.centrasite.activesoa.virtual.service.tmodelkey.description = tModelKey to add to proxied business services in ActiveSOA.
 uddi.centrasite.activesoa.virtual.service.tmodelkey.clusterProperty = uddi.centrasite.activesoa.virtual.service.tmodelkey
