Initial implementation of GoTo in the policy editor. Function is available via the Edit menu or via Ctrl + G.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26000 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
@@ -32,6 +32,7 @@ Cut_MenuItem_text = Cut
 Copy_MenuItem_text = Copy
 CopyAll_MenuItem_text = Copy All
 Paste_MenuItem_text = Paste
+Goto_MenuItem_text = Goto
 Node_ViewLogsMenuItem_text_name = View Logs
 Node_ViewLogsMenuItem_text_description = View logs for the selected node
 Node_DeleteMenuItem_text_name = Delete
