Progress with policy editor search feature. Initial implementation and will be refactored. Added dynamic search bar with dynamic drop down list of matching assertions. Case sensitive implemented and goto of selected assertion. Forward, next and search results not implemented yet.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26021 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
@@ -21,8 +21,8 @@ ExitMenuItem.name = Exit
 ExitMenuItem.desc = Exit the SecureSpan Manager
 New_MenuItem_text = New
 Edit_MenuItem_text = Action
-Find_MenuItem_text_name = Search Identity Provider
-Find_MenuItem_text_description = Search users and/or groups in an Identity Provider
+Search_IdentityProvider_MenuItem_text = Search Identity Provider
+Search_IdentityProvider_MenuItem_text_description = Search users and/or groups in an Identity Provider
 Delete_MenuItem_text = Delete
 Refresh_MenuItem_text = Refresh
 ServerLoad_MenuItem_text = Server Load
@@ -33,6 +33,7 @@ Copy_MenuItem_text = Copy
 CopyAll_MenuItem_text = Copy All
 Paste_MenuItem_text = Paste
 Goto_MenuItem_text = Goto
+Find_MenuItem_text = Find
 Node_ViewLogsMenuItem_text_name = View Logs
 Node_ViewLogsMenuItem_text_description = View logs for the selected node
 Node_DeleteMenuItem_text_name = Delete
