Initial draft of policy debug tracing (via a dogfood trace policy).  The PolicyEnforcementContext now keeps track of the PolicyMetadata for the current service or fragment policy (kept up to date by ServerPolicyHandle's checkRequest method), the current assertion ordinal path (kept up to date by the ServerInclude assertion's checkRequest method), and an optional AssertionTraceListener (installed by the MessageProcessor if tracing is enabled on the service).  PolicyMetadata now includes the PolicyHeader for the Policy entity in question (which provides access to the OID and GUID and such).
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26024 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -241,6 +241,11 @@ ldapReadTimeout.description =  LDAP read timeout.  A value less than or equal to
 ldapReadTimeout.default = 30s
 ldapReadTimeout.clusterProperty = ldap.read.timeout
 
+trace.policy.guid.description = GUID of internal policy to invoke after each assertion finished, when debug tracing is enabled for a published service (default=empty)
+trace.policy.guid.default =
+trace.policy.guid.clusterProperty = trace.policy.guid
+trace.policy.guid.visible = false
+
 # Audit settings
 audit.sink.policy.guid.description = GUID of internal policy to invoke when flushing audit messages, or empty to use internal audit database (default=empty)
 audit.sink.policy.guid.default =
