--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
@@ -34,6 +34,8 @@ CopyAll_MenuItem_text = Copy All
 Paste_MenuItem_text = Paste
 Goto_MenuItem_text = Goto
 Find_MenuItem_text = Find
+F3_MenuItem_text = Find Next
+Shift_F3_MenuItem_text = Find Previous
 Node_ViewLogsMenuItem_text_name = View Logs
 Node_ViewLogsMenuItem_text_description = View logs for the selected node
 Node_DeleteMenuItem_text_name = Delete
